--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../src/css/style.css">
+    <link rel="stylesheet" href="./src/css/style.css">
     <title>Menu</title>
 </head>
 <div>
@@ -16,23 +16,23 @@
                 <nav>
                     <ul class="menu">
                         <li>
-                            <button class="boton-menu boton-categoria active"><i class="bi bi-hand-index-fill"></i>Todos los productos</button>
+                            <button id="todos" class="boton-menu boton-categoria active"><i class="bi bi-hand-index-fill"></i>Todos los productos</button>
                         </li>
 
                         <li>
-                            <button class="boton-menu boton-categoria"><i class="bi bi-hand-index"></i>Burgers</button>
+                            <button id="burger" class="boton-menu boton-categoria"><i class="bi bi-hand-index"></i>Burgers</button>
                         </li>
 
                         <li>
-                            <button class="boton-menu boton-categoria"><i class="bi bi-hand-index"></i>Starters</button>
+                            <button id="starters" class="boton-menu boton-categoria"><i class="bi bi-hand-index"></i>Starters</button>
                         </li>
 
                         <li>
-                            <button class="boton-menu boton-categoria"><i class="bi bi-hand-index"></i>Dessert</button>
+                            <button id="desserts" class="boton-menu boton-categoria"><i class="bi bi-hand-index"></i>Dessert</button>
                         </li>
 
                         <li>
-                            <a class="boton-menu boton-carrito active" href="../public/carrito.html"><i class="bi bi-cart-fill"></i>Carrito <span class="numerito">0</span>
+                            <a class="boton-menu boton-carrito" href="../public/carrito.html"><i class="bi bi-cart-fill"></i>Carrito <span class="numerito">0</span>
                             </a>
                         </li>
 
