--- a/carrito.html
+++ b/carrito.html
@@ -7,7 +7,7 @@
     <title>Menu</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <link rel="stylesheet" href="../src/css/style.css">
+    <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
 
@@ -73,8 +73,8 @@
     
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="../src/js/app.js"></script>
-    <script src="../src/js/menu.js"></script>
-    <script src="../src/js/carrito.js"></script>
+    <script src="./src/js/app.js"></script>
+    <script src="./src/js/menu.js"></script>
+    <script src="./src/js/carrito.js"></script>
 </body>
 </html>
